--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   }
 
   .body{
-    background-image: url(../src/imgs/hh.webp);
+    background-image: url(../src/imgs/background.png);
     background-size: cover;
     height: 80vh;
   }
